# contracts

./: .gitignore  README.md  package.json  truffle.js
contracts/: AdHashToken.sol  Creatives.sol  CreativesRegistry-flat.sol  CreativesRegistry.sol  CreativesStorage.sol  CreativesV1.sol  Members.sol  MembersRegistry-flat.sol  MembersRegistry.sol  MembersStorage.sol  MembersV1.sol  TestCoin.sol  Token-flat.sol  Token.sol  Utilities.sol  UtilitiesRegistry-flat.sol  UtilitiesRegistry.sol  UtilitiesStorage.sol  UtilitiesV1.sol
migrations/: 2_deploy_contracts.js
samples/: allowBidders.js  changeInformation.js  config.js  getAllowBidders.js  getMember.js  getTransaction.js  init.cmd  initialization.js  registerMember.js
samples/creatives/: announceCreative.js  announceCreatives.js  changeInitialThreshold.js  changeMembersAddress.js  changeThresholdStep.js  getCreatives.js  setContractAddress.js
samples/members/: allowBidders.js  blockMember.js  changeInformation.js  getAllowBidders.js  getMember.js  getMemberRole.js  participateInVoting.js  registerMember.js  setContractAddress.js  unblockMember.js
samples/token/: approve.js  balanceOf.js  transfer.js
samples/utilities/: announceCreative.js  changeMembersAddress.js  changeTokenAddress.js  fineDeposit.js  getCreatives.js  getDeposit.js  makeDeposit.js  makePaymentToBidder.js  makePaymentToPublisher.js  setContractAddress.js  withdrawDeposit.js
solana_contracts/creative/: Cargo.toml
solana_contracts/creative/src/: creative.rs  error.rs  lib.rs  processor.rs
solana_contracts/member/: Cargo.toml
(+8 files in other folders)
