[package]
name = "contracts_solana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.9.5"
spl-token = { version="3.2.0", features = [ "no-entrypoint" ] }
thiserror = "1.0"
num-derive = "0.3"
arrayref = "0.3.6"
num-traits = "0.2"

[lib]
name = "contracts_solana"
crate-type = ["cdylib", "lib"]